--- a/docs/szakdolgozat/dolgozat.tex
+++ b/docs/szakdolgozat/dolgozat.tex
@@ -32,8 +32,9 @@
 \include{chapters/2_concept}
 \include{chapters/3_design}
 \include{chapters/4_implementation}
-\include{chapters/5_test}
-\include{chapters/6_summary}
+\include{chapters/5_Ai}
+\include{chapters/6_test}
+\include{chapters/7_summary}
 
 \clearpage
 
