--- a/docs/szakdolgozat/dolgozat.tex
+++ b/docs/szakdolgozat/dolgozat.tex
@@ -30,10 +30,10 @@
 
 \include{chapters/1_introduction}
 \include{chapters/2_concept}
-\include{chapters/3_design}
+\include{chapters/3_model}
 \include{chapters/4_implementation}
 \include{chapters/5_Ai}
-\include{chapters/6_test}
+\include{chapters/6_simulations}
 \include{chapters/7_summary}
 
 \clearpage
