The administrative parts have been fixed

--- a/docs/szakdolgozat/cover/cimlap.tex
+++ b/docs/szakdolgozat/cover/cimlap.tex
@@ -15,7 +15,7 @@
 % A szakdolgozat címe, akár több sorban is
 {\LARGE
 \begin{center}
-\textbf{Gépi játékos fejlesztése a Splendor nevű játékhoz}
+\textbf{Gépi játékos fejlesztése \\ a Splendor nevű játékhoz}
 \end{center}}
 
 \vspace*{2.5truecm}
