--- a/docs/szakdolgozat/cover/feladatkiiras.tex
+++ b/docs/szakdolgozat/cover/feladatkiiras.tex
@@ -11,7 +11,7 @@ Alkalmazott Matematikai Intézeti Tanszék\hspace*{4cm}\hfil \textbf{Szám:}
 \vskip 0.5cm
 Kollár Máté (J004TM) programtervező informatikus jelölt részére.\newline
 
-\noindent\textbf{A szakdolgozat tárgyköre:} kulcsszavak, hasonlók\newline
+\noindent\textbf{A szakdolgozat tárgyköre:} Mesterséges intelligencia\newline
 
 \noindent\textbf{A szakdolgozat címe:} Gépi játékos fejlesztése a Splendor nevű játékhoz\newline
 
@@ -45,7 +45,7 @@ Kollár Máté (J004TM) programtervező informatikus jelölt részére.\newline
 \end{center}
 \vspace*{2cm}  
 
-Alulírott \textbf{Szakdolgozó Neve}; Neptun-kód: \texttt{N3P7UN} a Miskolci Egyetem Gépészmérnöki és Informatikai Karának végzős Programtervező informatikus szakos hallgatója ezennel büntetőjogi és fegyelmi felelősségem tudatában nyilatkozom és aláírásommal igazolom, hogy \textit{Szakdolgozat Címe}
+Alulírott \textbf{Kollár Máté}; Neptun-kód: \texttt{J004TM} a Miskolci Egyetem Gépészmérnöki és Informatikai Karának végzős Programtervező informatikus szakos hallgatója ezennel büntetőjogi és fegyelmi felelősségem tudatában nyilatkozom és aláírásommal igazolom, hogy \textit{ Gépi játékos fejlesztése a Splendor nevű játékhoz}
 című szakdolgozatom saját, önálló munkám; az abban hivatkozott szakirodalom
 felhasználása a forráskezelés szabályai szerint történt.\\
 
