Review of Chapter 2

--- a/docs/szakdolgozat/cover/feladatkiiras.tex
+++ b/docs/szakdolgozat/cover/feladatkiiras.tex
@@ -9,7 +9,7 @@ Alkalmazott Matematikai Intézeti Tanszék\hspace*{4cm}\hfil \textbf{Szám:}
 \large\textsc{\bfseries Szakdolgozat Feladat}
 \end{center}
 \vskip 0.5cm
-Kollár Máté (J004TM) programtervező informatikus jelölt részére.\newline
+Kollár Máté (J004TM) Programtervező informatikus jelölt részére.\newline
 
 \noindent\textbf{A szakdolgozat tárgyköre:} Mesterséges intelligencia\newline
 
@@ -23,11 +23,11 @@ Kollár Máté (J004TM) programtervező informatikus jelölt részére.\newline
 
 \vfill
 
-\noindent\textbf{Témavezető:} Dr. Földvári Attila József (beosztása) \newline
+\noindent\textbf{Témavezető:} Dr. Földvári Attila József (egyetemi adjunktus) \newline
 
 % \noindent\textbf{Konzulens(ek):} (akkor kötelezõ, ha a témavezetõ nem valamelyik matematikai tanszékrõl való; de persze lehet egyébként is)\newline
 
-\noindent\textbf{A feladat kiadásának ideje:}\newline
+\noindent\textbf{A feladat kiadásának ideje:} 2021. szeptember 28.\newline
 
 %\noindent\textbf{A feladat beadásának határideje:}
 
