Finishing the previous TODO list
Fixed the project description
Fixed the 2v5 graphs
Chapter 2: References
Chapter 4:
         Bézier curve
         Classnames in sections
         Sequence of operations
         Images of start and end screen
         Image references
         Refactored UML
Chapter 5:
         AI interface
         AI appellation
         AI flowcharts references
         AI feature table
Chapter 6:
         Conclusion of the graphs
         Graph references
         AI ranking table
Chapter 7: Import the appendices

--- a/docs/szakdolgozat/dolgozat.bib
+++ b/docs/szakdolgozat/dolgozat.bib
@@ -1,10 +1,31 @@
-@article{coombs1987markup,
-  title={Markup systems and the future of scholarly text processing},
-  author={Coombs, James H and Renear, Allen H and DeRose, Steven J},
-  journal={Communications of the ACM},
-  volume={30},
-  number={11},
-  pages={933--947},
-  year={1987},
-  publisher={ACM}
+@misc{rulebook,
+    author = "{Marc André}",
+    title = "{Splendor Rulebook}",
+    year = "2014",
+    howpublished = {\url{https://jatekdij.hu/tartalom/tarsasjatek/Splendor.pdf/}},
+    note = "[Online]"
+}
+
+@misc{cities,
+    author = "{Games Up}",
+    title = "{Splendor - The Cities}",
+    year = "2018",
+    howpublished = {\url{https://store.steampowered.com/app/797510/Splendor__The_Cities/}},
+    note = "[Online]"
+}
+
+@misc{strongholds,
+    author = "{Days of Wonder}",
+    title = "{Splendor - The Strongholds}",
+    year = "2018",
+    howpublished = {\url{https://store.steampowered.com/app/798250/Splendor__The_Strongholds/}},
+    note = "[Online]"
+}
+
+@misc{trading,
+    author = "{Games Up}",
+    title = "{Splendor - The Trading Posts}",
+    year = "2020",
+    howpublished = {\url{https://store.steampowered.com/app/798252/Splendor__The_Trading_Posts/}},
+    note = "[Online]"
 }
