--- a/docs/szakdolgozat/dolgozat.tex
+++ b/docs/szakdolgozat/dolgozat.tex
@@ -5,6 +5,7 @@
 \usepackage{listings}
 \usepackage{styles/cpp}
 \usepackage{styles/python}
+\usepackage{multirow}
 
 \usepackage{hyperref}
 
@@ -35,11 +36,13 @@
 \include{chapters/5_Ai}
 \include{chapters/6_simulations}
 \include{chapters/7_summary}
+\appendix
+\include{chapters/8_appendix}
 
 \clearpage
 
 \addcontentsline{toc}{chapter}{Irodalomjegyzék}
-\bibliographystyle{plain}
+\bibliographystyle{unsrt}
 \bibliography{dolgozat.bib}
 
 \newpage
