Introduction and summary chapters

--- a/docs/szakdolgozat/cover/feladatkiiras.tex
+++ b/docs/szakdolgozat/cover/feladatkiiras.tex
@@ -19,9 +19,7 @@ Kollár Máté (J004TM) Programtervező informatikus jelölt részére.\newline
 
 \medskip
 
-\emph{A Splendor egy teljes információs absztrakt társasjáték. A játék célja, hogy megszerezzen kitüntetett lapokat. Ehhez a játékosnak "motort" kell építeni, amely segítségével folyamatosan növelni lehet a játékos számára elérhető további lapokat. A dolgozat bemutatja a játék mechanikáját. Megvizsgálja, hogy a benne szereplő kártyák költségei miből adódhattak, hogyan formálódnak a játék előrehaladtával. Kidolgozásra és bemutatásra kerülnek saját heurisztikák a gépi játékos megvalósításához. A játék, mint alkalmazás JavaScript programozási nyelven kerül megvalósításra, melyhez a megjelenítés HTML5 Canvas segítségével történik.}
-
-% \emph{A Splendor egy teljes információs absztrakt társasjáték. A játék célja, hogy megszerezzen kitüntetett lapokat. Ehhez a játékosnak "motort" kell építeni, amely segítségével folyamatosan növelni lehet a játékos számára elérhető további lapokat. A dolgozat bemutatja a játék mechanikáját. Megvizsgálja, hogy a benne szereplő kártyák költségei miből adódhattak, hogyan formálódnak a játék előrehaladtával. Kidolgozásra és bemutatásra kerülnek saját heurisztikák a gépi játékos megvalósításához. A játék, mint alkalmazás JavaScript programozási nyelven kerül megvalósításra, melyhez a megjelenítés HTML5 Canvas, valamint CSS segítségével történik.}
+\emph{A Splendor egy teljes információs absztrakt társasjáték. A játék célja, hogy megszerezzen kitüntetett lapokat. Ehhez a játékosnak "motort" kell építeni, amely segítségével folyamatosan növelni lehet a játékos számára elérhető további lapokat. A dolgozat bemutatja a játék mechanikáját. Megvizsgálja, hogy a benne szereplő kártyák költségei miből adódhattak, hogyan formálódnak a játék előrehaladtával. Kidolgozásra és bemutatásra kerülnek saját heurisztikák a gépi játékos megvalósításához. A játék, mint alkalmazás JavaScript programozási nyelven kerül megvalósításra, melyhez a megjelenítés HTML5 Canvas, valamint CSS segítségével történik.}
 
 \vfill
 
