Some stylistical corrections

--- a/docs/szakdolgozat/cover/hasznalati.tex
+++ b/docs/szakdolgozat/cover/hasznalati.tex
@@ -4,6 +4,18 @@
 
 \vskip 1cm
 
+\noindent A szakdolgozaton mellékelt lemezen a következő jegyzékek és fájlok találhatók meg.
+
+\begin{itemize}
+	\item \texttt{demos/card\_rendering}: A Splendor játék implementációja és a hozzá készített szimulációk.
+	\item \texttt{szakdolgozat.pdf}: A szakdolgozat PDF formátumban.
+	\item \texttt{docs/szakdolgozat}: A szakdolgozat \LaTeX\ forráskódja.
+\end{itemize}
+
+\bigskip
+
+\noindent A játék elindításához a \texttt{demos/card\_rendering/index.html} fájl megnyitására van szükség.
+
 %Ennek a címe lehet például \textit{A mellékelt CD tartalma} vagy \textit{Adathordozó használati %útmutató} is.
 
 %Ez jellemzően csak egy fél-egy oldalas leírás.
