--- a/docs/szakdolgozat/dolgozat.bib
+++ b/docs/szakdolgozat/dolgozat.bib
@@ -29,3 +29,18 @@
     howpublished = {\url{https://store.steampowered.com/app/798252/Splendor__The_Trading_Posts/}},
     note = "[Online]"
 }
+
+@book{fulton2013html5,
+	title={HTML5 canvas: native interactivity and animation for the web},
+	author={Fulton, Steve and Fulton, Jeff},
+	year={2013},
+	publisher={" O'Reilly Media, Inc."}
+}
+
+@book{gasston2011book,
+	title={The book of CSS3: A Developer's Guide to the Future of Web Design},
+	author={Gasston, Peter},
+	year={2011},
+	publisher={no starch press}
+}
+
